<!--

    Copyright 2013 Alexey Ragozin

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.gridkit.coherence-tools</groupId>
        <artifactId>coherence-tools-parent-pom</artifactId>
        <version>1</version>
    </parent>

    <artifactId>partition-watchdog</artifactId>
    <version>0.10.1-SNAPSHOT</version>
    <name>${project.groupId}::${project.artifactId}</name>
    <description>Utility for managing data preloading and recovery in Oracle Coherence.</description>
    
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>alexey.ragozin</id>
            <name>Alexey Ragozin</name>
            <email>alexey.ragozin@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:svn:http://gridkit.googlecode.com/svn/coherence-tools/trunk/partition-watchdog</connection>
        <developerConnection>scm:svn:https://gridkit.googlecode.com/svn/coherence-tools/trunk/partition-watchdog</developerConnection>
        <url>http://gridkit.googlecode.com/svn/coherence-tools/trunk/partition-watchdog</url>
    </scm>
    
    <properties>
        <java.version>1.6</java.version>    
        <coherence.version>3.7.1.3</coherence.version>
        <chtest.version>0.2.1</chtest.version>
        <junit.version>4.10</junit.version>
        <slf4j.version>1.6.0</slf4j.version>
        <logback.version>0.9.21</logback.version>
    </properties>
    
    <dependencies>
        <!-- Coherence -->
        <dependency>
            <groupId>com.oracle.coherence</groupId>
            <artifactId>coherence</artifactId>
            <version>${coherence.version}</version>
            <optional>true</optional>
        </dependency>
        
        <!-- SLF4J Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        
        <!-- Test dependencies -->
        <dependency>
            <groupId>org.gridkit.coherence-tools</groupId>
            <artifactId>chtest</artifactId>
            <version>${chtest.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration> 
            </plugin>                
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.14.1</version>
                <configuration>
                    <!-- Decoration is causing problem in certain environments -->
                    <argLine>
                        -server
                        -Xms=300m -Xmx=300m
                        -XX:MaxPermSize=80m
                        -Dgridkit.isolate.class-source-decoration=false
                    </argLine>
                    <reuseForks>false</reuseForks>
                    <includes>
                        <include>**/*TestPlan.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <remoteTagging>false</remoteTagging>
                    <suppressCommitBeforeTag>true</suppressCommitBeforeTag>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9</version>
                <executions>
                    <execution>
                        <id>attach-javadoc</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-source</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
</project>